# ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: aabb.cpp  aabb.h  camera.cpp  camera.h  constants.h  hit_record.h  main.cpp  material.h  pixel.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scatter.cpp  scatter.h  scene.cpp  scene.h  settings.h  sphere.cpp  sphere.h  utils.cpp  utils.h  vec3.cpp  vec3.h
src/material/: material.h  material_diffuse.cpp  material_diffuse.h  material_diffuse_light.cpp  material_diffuse_light.h  material_isotropic.cpp  material_isotropic.h  material_metal.cpp  material_metal.h  material_refractive.cpp  material_refractive.h
src/objects/: aa_rect.cpp  aa_rect.h  box.cpp  box.h  bvh_node.cpp  bvh_node.h  constant_medium.cpp  constant_medium.h  flip_face.cpp  flip_face.h  hittable.h  hittable_list.cpp  hittable_list.h  rect_xy.cpp  rect_xy.h  rect_xz.cpp  rect_xz.h  rect_yz.cpp  rect_yz.h  rotation_y.cpp  rotation_y.h  sphere.cpp  sphere.h  translation.cpp  translation.h  x_aa_rect.cpp  x_aa_rect.h  y_aa_rect.cpp  y_aa_rect.h  z_aa_rect.cpp  z_aa_rect.h
src/pdf/: pdf.h  pdf_cosine.cpp  pdf_cosine.h  pdf_hittable.cpp  pdf_hittable.h  pdf_mixture.cpp  pdf_mixture.h
src/settings/: camera.h  camera_settings.h  settings.h
src/structs/: camera_settings.h  hit_record.h  scatter_info.h  scatter_record.h  thread_info.h
src/texture/: texture.h  texture_checkered.cpp  texture_checkered.h  texture_image.cpp  texture_image.h  texture_noise.h  texture_solid_color.cpp  texture_solid_color.h
src/utils/: onb.cpp  onb.h  perlin.h  (+3 more)
